--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="./css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+</head>
 
 <body>
     <header class="page-header">
