добавил код в header

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./css/normalize.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="./css/normalize.css" /> -->
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
 </head>
 
 <body>
     <header class="page-header">
-        <div class="logo">Webfolio My Web Design Portfolio</div>
+        <div class="logo"><p style="text-transform:uppercase">Webfolio</p><br> My Web Design Portfolio</div>
             <nav class="main-nav">
                 <ul class="nav-list">
                     <li class="list-item"><a href="#" class="item-link">Home</a></li>
@@ -30,7 +32,15 @@
     </header>
 
     <main>
-        <section></section>
+       <!-- <section>
+            <div class="holder">
+                <div></div>
+                <div>second text</div>
+            </div>
+            <div class="holder"></div>
+            <div class="holder"></div>
+            <div class="holder"></div>
+        </section>-->
     </main>
 
     <footer></footer>
