--- a/index.html
+++ b/index.html
@@ -43,7 +43,53 @@
         </section>-->
     </main>
 
-    <footer></footer>
+    <footer class="page-footer">
+            <img src="" alt="Фото Lorema" width="50" height="50">
+            <h2>Lorem Ipsum</h2>
+            <a href="#" class="geo">
+                <img src="" alt="Иконка локации" width="12" height="20">
+            </a>
+            <p>Kerala, India</p>
+            <h2 class="visually-hidden">Достижения Lorem Ipsum</h2>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release 
+            of letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
+            Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+            <ul class="social-list">
+                  <li class="social-item">
+                    <a href="#" class="social-link">
+                        <img src="images/twitter-icon-white.svg" alt="Иконка твитера" width="26" height="20">
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a href="#" class="social-link">
+                        <img src="" alt="Иконка" width="12" height="20">
+                    </a>
+                </li>
+            </ul>
+            <div class="skills">
+                <h2>My Skills</h2>
+                <dl class="skills-list">
+                  <dt class="skill">Ps</dt>
+                  <dd class="level"><div style="width: 60%;"></div></dd>
+                  <dt class="skill">Ai</dt>
+                  <dd class="level"><div style="width: 80%;"></div></dd>
+                  <dt class="skill">Bs</dt>
+                  <dd class="level"><div style="width: 20%;"></div></dd> 
+                  <dt class="skill">Cs</dt>
+                  <dd class="level"><div style="width: 90%;"></div></dd>
+                </dl>
+              </div> 
+             
+    </footer>
+    <div class="copyright">
+        <p>Copyright 2012 Css Author</p>
+    </div>
+    
 
     <script src="./js/main.js"></script>
 </body>
